2005-02-12 16:38  cpb

	* Makefile.PL (1.12):

	add some automated ChangeLog creation to the Makefile.PL

2005-02-12 16:36  cpb

	* Doc.pm (1.18), makepalmdoc (1.5), mobisucks (1.6):

	Got a prc from a user which claims to be a TEXt/REAd format, but doesn't
	use Doc compression and causes things to blow up. This change allows us to
	catch these kinds of files. Hopefully.

2004-10-09 01:19  cpb

	* Doc.pm (1.17):

	force version increment

2004-10-09 01:18  cpb

	* Makefile.PL (1.11), README (1.2), test.pl (1.8):

	cpan testers can't find p5-Palm, so hack around it...

2004-10-09 01:04  cpb

	* Makefile.PL (1.10):

	p5-Palm hack didn't work

2004-10-07 23:52  cpb

	* MANIFEST (1.7), test.pl (1.7):

	okay, cuckoos is a bit large for distribution

2004-10-07 22:42  cpb

	* MANIFEST (1.6), Makefile.PL (1.9), test.pl (1.6):

	*: use Test::More

	*: add cuckoos.prc to test script and MANIFEST

2004-10-07 21:38  cpb

	* Doc.pm (1.16):

	force version increment

2004-10-07 21:36  cpb

	* Makefile.PL (1.8):

	gruesome hack to force installation of p5-Palm if it's missing. It's
	probably better if I don't explain further.

2004-10-05 21:13  cpb

	* Makefile.PL (1.7):

	remove some quotes

2004-10-05 21:10  cpb

	* Doc.pm (1.15):

	force version increment

2004-10-05 21:10  cpb

	* Makefile.PL (1.6), htmltopalmdoc (1.3), mobisucks (1.5):

	use HTML::Entities to attempt to handle HTML character entities.
	Unfortunately, HTML::Entities can't handle anything that isn't represented
	in 8859-1 so there's a little left over. We manually convert the stuff that
	we know about (mostly quotes) and strip out the rest.

2004-10-05 21:08  cpb

	* cuckoos.prc (1.1):

	test file using MOBI/BOOK type

2004-10-05 14:46  cpb

	* Makefile.PL (1.5):

	update dependencies for the HTML conversion scripts.

2004-10-05 01:53  cpb

	* Doc.pm (1.14):

	add creator "MOBI", type "BOOK"

2004-06-18 00:12  cpb

	* htmltopalmdoc (1.2):

	fix newline stripping regex

2004-06-13 13:45  cpb

	* Doc.pm (1.13):