@@ -1,7 +1,7 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         Palm-Doc
-version:      1.18
+version:      1.19
 version_from: Doc.pm
 installdirs:  site
 requires:
